--- a/assets/master.css
+++ b/assets/master.css
@@ -34,7 +34,7 @@ nav > a{
 }
 .side-bar{
   width: 200px;
-  height: 100vh;
+  /* height: auto; */
   background-color: black;
   position:fixed;
   top: 0;
@@ -48,7 +48,12 @@ nav > a{
    list-style: none;
    margin: 20px 20px;
    color: #7E8184;
+   font-size: 15px;
  }
+  .side-bar .content > ul li:hover{
+    cursor: pointer;
+    color: white;
+  }
  .color-grey{
    color: #7E8184;
  }
@@ -76,10 +81,13 @@ nav > a{
 }
 
  .display-inline{
-  display: inline-block;
+  /* display: inline-block; */
   position: relative;
 }
-
+.categorie{
+  height: 50vh;
+  overflow-y: auto;
+}
  .playlist{
   position: absolute;
   top: 0;
@@ -89,17 +97,22 @@ nav > a{
 }
 
  .profile{
-
-  /* flex-direction:column;
-  align-items: flex-end;
-  flex-direction: column;
-  justify-content: flex-end;*/
-margin-top: 50px;
+   display: flex;
+  flex-direction:column;
+ /* align-items: flex-end; */
+  /*
+/*  justify-content: flex-end;  ho povato a fare flex-end ma non lo mette alla fine */
+/* margin-top: 50px; */
+  margin-top: auto;
+}
+.side-bar .profile > ul li:hover{
+  cursor: pointer;
+  color: white;
 }
 .profile hr{
   width: 80%;
   margin: 0 auto;
-  color: #7E8184;   /* non so perchè non mi fa cambiare il colore ad hr */
+  border:1px solid #7E8184;   /* non so perchè non mi fa cambiare il colore ad hr */
 
 }
 .profile  ul li{
@@ -129,9 +142,22 @@ color: #7E8184;
 padding: 20px;
 margin-top: 77px;
 }
+main > ul li:first-child{
+  border-bottom: 1px solid green;
+
+  /* border-bottom-width:10%; */
+  border-bottom-width: medium;
+
+}
+main > ul > li:hover{
+
+    cursor: pointer;
+    color: white;
+}
 main > ul > li{
   display: inline-block;
   margin-right: 10px;
+  margin-bottom: 20px;
 }
 
 main h2 , main p{
@@ -144,10 +170,11 @@ main h2 , main p{
 .raccolta{
   display:flex;
   /* flex-direction: row; */
-  flex-shrink: 3;
+  /* flex-shrink: 3; */
   overflow-y: scroll;
   flex-wrap: wrap;
 }
+
 .card > img{
   height: 180px;
   width: 180px;
@@ -157,11 +184,9 @@ main h2 , main p{
   justify-content: center;
 }
 .card{
-
-  /* height: 200px;
-  width: 200px;
-  background-color: yellow; */
-  margin-right: 20px;
+  /* width: calc(100%/6 - 10px); */
+  /* margin-right: 20px; */
+  margin: 5px;
   position:relative;
   /* flex-basis: 20%; */
   /* display: flex; */
@@ -215,27 +240,61 @@ main h2 , main p{
 footer{
   height: 100px;
   width: 100%;
-  background-color: lightgrey;
+  background-color: #7E8184;
   position: fixed;
   bottom: 0;
   left: 0;
   z-index: 3;
+  display: flex;
+  justify-content: space-between;
+}
+.parte-sx{
+line-height: 100px;
+
 }
 
-.img-cuore{
+.parte-sx ul li{
   display: inline-block;
-  line-height: 100px;
-}
+  align-self: center;
 
-.img-cuore > img{
+}
+.parte-sx ul li > p{
+ display: flex;
+ /* flex-direction: column; */
+}
+.parte-sx ul li img{
   height: 50px;
   width: 50px;
 }
+footer > .parte-sx > ul > li p.block{
+   display: block;
+}
 
-@media all and(max-width: 1393px) {
-  /* .card{
-    /* width: calc(100% / 12 *4);
-    flex-basis: 50%;
-    flex-wrap: wrap; */
+.parte-centrale > .display-inline li{
+   display: inline-block;
+}
+
+.parte-centrale{
+  display: flex;
+  /* justify-content: center; */
+  font-size: 20px;
+}
+.parte-dx > ul  li{
+     display: inline-block;
+     justify-content: flex-end;
+}
+@media all and (max-width: 992px) {
+   .card{
+   width: calc(100% / 4 -10px);
   }
 }
+@media all and (max-width: 768px) {
+   .card{
+   width: calc(100% /2 -10px);
+  }
+}
+/* @media all and (min-width: 0px) and (max-width: 768px) {
+   .side-bar{
+   width: 50px;
+  }
+} */
