--- a/assets/master.css
+++ b/assets/master.css
@@ -29,26 +29,38 @@ nav > a{
   text-decoration: none;
   /* display: flex;
   justify-content: flex-end; */
-
-
+}
+nav > a:hover{
+  transform: scale(1.1);
+}
+a{
+  text-decoration: none;
+  color: #7E8184;
 }
 .side-bar{
   width: 200px;
-  /* height: auto; */
+  height: calc(100% - 100px);
   background-color: black;
   position:fixed;
   top: 0;
   left: 0;
+  /* bottom: -100px; */
   z-index: 2;
+  display: flex;
+  flex-direction: column;
 }
-.side-bar > .logo > img{
+.side-bar img{
   height: 60px;
+}
+.display-none{
+  display: none;
 }
  .side-bar .content > ul li{
    list-style: none;
    margin: 20px 20px;
    color: #7E8184;
    font-size: 15px;
+   justify-content: flex-start;
  }
   .side-bar .content > ul li:hover{
     cursor: pointer;
@@ -85,8 +97,8 @@ nav > a{
   position: relative;
 }
 .categorie{
-  height: 50vh;
-  overflow-y: auto;
+    height: 35vh;
+    overflow-y: auto;
 }
  .playlist{
   position: absolute;
@@ -97,9 +109,8 @@ nav > a{
 }
 
  .profile{
-   display: flex;
-  flex-direction:column;
- /* align-items: flex-end; */
+
+ /* justify-content: flex-end; */
   /*
 /*  justify-content: flex-end;  ho povato a fare flex-end ma non lo mette alla fine */
 /* margin-top: 50px; */
@@ -133,7 +144,7 @@ nav > a{
 main{
   background-color: #141922;
   padding-left: 210px;
-  height: 200vh;
+  /* height: 200vh; */
 }
 
 main > ul{
@@ -248,41 +259,53 @@ footer{
   display: flex;
   justify-content: space-between;
 }
-.parte-sx{
-line-height: 100px;
-
+ .parte-sx{
+   display: flex;
+   align-self: center;
 }
 
 .parte-sx ul li{
   display: inline-block;
-  align-self: center;
+  margin: 0 5px;
+}
 
-}
-.parte-sx ul li > p{
- display: flex;
- /* flex-direction: column; */
-}
-.parte-sx ul li img{
+
+.parte-sx img{
   height: 50px;
   width: 50px;
+  margin: 10px 10px;
 }
-footer > .parte-sx > ul > li p.block{
-   display: block;
+.block{
+  margin-top: -18px;
+}
+.descrizione-canzone{
+ /* line-height: 100px; */
+ padding-top: 20px;
+ margin-right: 30px;
+}
+
+.nome-brano{
+  line-height: 73px;
 }
 
 .parte-centrale > .display-inline li{
    display: inline-block;
+   font-size: 25px;
+   margin: 10px 10px;
 }
 
 .parte-centrale{
   display: flex;
-  /* justify-content: center; */
-  font-size: 20px;
+  justify-content: center;
 }
+
 .parte-dx > ul  li{
      display: inline-block;
      justify-content: flex-end;
+
 }
+
+
 @media all and (max-width: 992px) {
    .card{
    width: calc(100% / 4 -10px);
@@ -293,8 +316,27 @@ footer > .parte-sx > ul > li p.block{
    width: calc(100% /2 -10px);
   }
 }
-/* @media all and (min-width: 0px) and (max-width: 768px) {
+ @media all and (min-width: 0px) and (max-width: 768px) {
+   .card{
+   width: calc(100% /2 -10px);
+  }
    .side-bar{
    width: 50px;
   }
-} */
+  .side-bar a , .categorie , .scompari{
+    display: none;
+  }
+  main{
+    padding-left: 50px;
+  }
+  nav{
+    width: 100%;
+  }
+  .display-none{
+    display: block;
+    height: 50px;
+  }
+  .logo{
+    display: none;
+  }
+}
